--- a/index.html
+++ b/index.html
@@ -3,98 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProWorker | Global Elite Network</title>
+    <title>ProWorker | Global Enterprise</title>
     <style>
-        /* Animated Gradient Background */
+        /* Smooth Background Animation */
         @keyframes gradientBG {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
 
+        /* Pro-Level Lightning Effect */
+        @keyframes lightningStrike {
+            0%, 10%, 80%, 100% { 
+                text-shadow: 0 0 10px rgba(244, 114, 182, 0.5); 
+                color: #f472b6;
+            }
+            82% { 
+                text-shadow: 0 0 50px #f472b6, 0 0 100px #ffffff; 
+                color: #fff;
+                transform: scale(1.02);
+            }
+            84% { 
+                text-shadow: 0 0 20px #f472b6; 
+                color: #f472b6;
+            }
+            86% { 
+                text-shadow: 0 0 60px #f472b6, 0 0 120px #f472b6; 
+                color: #fff;
+            }
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
             background: linear-gradient(-45deg, #020617, #0f172a, #1e293b, #020617);
             background-size: 400% 400%;
-            animation: gradientBG 8s ease infinite;
+            animation: gradientBG 10s ease infinite;
             color: #f8fafc;
-            /* Professional Tech Font */
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            margin: 0;
+            min-height: 100vh;
             overflow: hidden;
+            text-align: center;
         }
 
-        .container {
-            text-align: center;
-            z-index: 1;
+        .main-container {
+            width: 100%;
+            padding: 0 20px;
         }
 
         h1 {
-            font-size: 5.5rem;
-            color: #f472b6;
-            text-transform: uppercase;
-            letter-spacing: -3px;
-            /* Neon Glow Effect */
-            text-shadow: 0 0 15px rgba(244, 114, 182, 0.6), 
-                         0 0 30px rgba(244, 114, 182, 0.4);
-            margin: 0;
-            cursor: pointer;
-            transition: all 0.4s ease;
-        }
-
-        h1:hover {
-            transform: scale(1.05);
-            text-shadow: 0 0 25px #f472b6, 0 0 50px #f472b6;
-        }
-
-        .description {
-            font-size: 1.1rem;
-            color: #94a3b8;
-            margin-top: 15px;
-            max-width: 450px;
-            line-height: 1.6;
-            font-weight: 300;
-        }
-
-        .status-box {
-            margin-top: 40px;
-            padding: 10px 20px;
-            border: 1px solid rgba(244, 114, 182, 0.3);
-            border-radius: 5px;
-            font-size: 0.8rem;
+            /* Responsive Font Size: Adjusts based on screen width */
+            font-size: clamp(2.5rem, 12vw, 5rem); 
+            font-weight: 900;
             color: #f472b6;
             text-transform: uppercase;
             letter-spacing: 2px;
+            animation: lightningStrike 4s linear infinite;
+            cursor: pointer;
+            line-height: 1;
         }
 
-        .footer {
+        .tagline {
+            font-size: clamp(0.9rem, 3vw, 1.2rem);
+            color: #94a3b8;
+            margin-top: 20px;
+            letter-spacing: 1px;
+            max-width: 500px;
+            margin-left: auto;
+            margin-right: auto;
+            font-weight: 300;
+        }
+
+        .status-badge {
+            margin-top: 40px;
+            padding: 10px 25px;
+            border: 1px solid rgba(244, 114, 182, 0.4);
+            border-radius: 50px;
+            font-size: 0.75rem;
+            color: #f472b6;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            display: inline-block;
+            background: rgba(244, 114, 182, 0.05);
+        }
+
+        footer {
             position: absolute;
             bottom: 30px;
-            font-size: 0.75rem;
+            width: 100%;
+            font-size: 0.7rem;
             color: #475569;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 2px;
         }
     </style>
 </head>
 <body>
 
-    <div class="container">
+    <div class="main-container">
         <h1>ProWorker</h1>
-        <p class="description">Connecting world-class technical talent with high-end opportunities across the USA and Europe.</p>
+        <p class="tagline">Elite technical network for USA and European high-end markets.</p>
         
-        <div class="status-box">
-            System Initialization in Progress
+        <div class="status-badge">
+            System Online
         </div>
     </div>
 
-    <div class="footer">
-        © 2024 ProWorker Global | CEO Yasser
-    </div>
+    <footer>
+        © 2024 ProWorker Global | Managed by CEO Yasser
+    </footer>
 
 </body>
 </html>
