Add gradient background to body in index.html
Added CSS for a gradient background to the body.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <meta http-equiv="refresh" content="2">
         <!-- نستخدم هالكود علمود الموقع يحدث تقائيا بعدد الثواني الي نكتبها بالكونتنت -->
 </head>
+<body> 
+body {
+    background: linear-gradient(135deg, #020617 0%, #1e1b4b 100%);
+    /* هذا يعطيك مزيج بين الأسود والبنفسجي الغامق */
+}
 
+</body>
     
 </html>
