Change background gradient colors in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <title>KORONOS</title> 
         <style> 
         body {
-    background: radial-gradient(circle at center, #b4ffa3 30%, #020617 70%);
+    background: radial-gradient(circle at center, #b4ffa3 30%, #79bf69 70%);
     margin: 0;
     height: 100vh;
     display: flex;
